<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="@dimen/pmborder_medium">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/pmborder_xsmall"
            android:text="@string/summary_personal_details"
            android:textAppearance="?attr/textAppearanceSubtitle2"
            android:textColor="?attr/colorOnBackground" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/pmborder_medium">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/pmborder_medium">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_name_value"
                    android:textAppearance="?attr/textAppearanceSubtitle2"
                    android:textColor="?attr/colorOnBackground" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_details"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?attr/colorOnBackground" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/pmborder_xsmall"
            android:text="@string/summary_payment_details"
            android:textAppearance="?attr/textAppearanceSubtitle2"
            android:textColor="?attr/colorOnBackground" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/pmborder_medium">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="@dimen/pmborder_medium"
                android:paddingTop="@dimen/pmborder_medium"
                android:paddingBottom="@dimen/pmborder_medium">

                <ImageView
                    android:id="@+id/image_logo"
                    android:layout_width="@dimen/pmlogo_width"
                    android:layout_height="@dimen/pmlogo_height"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/pmpage_contentdescription" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/pmborder_medium"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/label_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        android:textColor="?attr/colorOnSurface" />

                    <TextView
                        android:id="@+id/label_subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?attr/colorOnSurface" />
                </LinearLayout>

                <Button
                    android:id="@+id/button_edit"
                    style="@style/Widget.ExampleDemo.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_edit" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/pmborder_xsmall"
            android:text="@string/summary_payment_amount"
            android:textAppearance="?attr/textAppearanceSubtitle2"
            android:textColor="?attr/colorOnBackground" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/pmborder_medium">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/product_total"
                        android:textAppearance="?attr/textAppearanceSubtitle2"
                        android:textColor="?attr/colorOnBackground" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_price"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textColor="?attr/colorOnBackground" />
                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_pay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/pmborder_medium"
                    android:text="@string/button_pay" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</merge>
